# detour

./: .ghci  .gitignore  LICENCE  Makefile  detour.cabal
lib/: Program.hs
lib/Linux/: Containers.hs
lib/Linux/Docker/: Remote.hs
src/: RuntimeProgram.hs
tests/: CommonPrograms.hs  Experiment.hs
