cabal-version:       >= 1.10
name:                detour
version:             0.1
synopsis:            Command line tools for Docker
license:             BSD3
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2014 Operational Dynamics Consulting, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8
stability:           experimental

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base >= 4 && <5,
                     vector,
                     bytestring,
                     containers

  hs-source-dirs:    lib
  include-dirs:      .

  exposed-modules:   Linux.Containers

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields

  ghc-prof-options:  -prof -fprof-auto-top


test-suite           check
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:     base >= 4 && <5,
                     HUnit,
                     hspec,
                     hspec-expectations,
                     QuickCheck,
                     bytestring,
                     containers,
                     detour

  hs-source-dirs:    tests
  main-is:           Check.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

  include-dirs:      .

  ghc-prof-options:  -prof -fprof-auto-top

executable           detour
  default-language:  Haskell2010

  build-depends:     base >= 4.7 && <5,
                     bytestring,
                     vector,
                     containers,
                     detour

  hs-source-dirs:    src
  main-is:           Detour.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

  include-dirs:      .

  ghc-prof-options:  -prof -fprof-auto-top


source-repository    head
  type:              git
  location:          git@github.com:afcowie/detour.git


-- vim: set tabstop=21 expandtab:
