cabal-version:       >= 1.10
name:                detour-haskell
version:             0.1
synopsis:            Unshipping Docker
license:             BSD3
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2014 Operational Dynamics Consulting, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8
stability:           experimental

build-type:          Custom

library
  default-language:  Haskell2010

  build-depends:     base >= 4 && <5,
                     vector,
                     bytestring,
                     containers,
                     hslogger,
                     unix

  hs-source-dirs:    lib

  exposed-modules:   Linux.Containers,
                     Linux.Program

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields

  ghc-prof-options:  -prof -fprof-auto-top


test-suite           check
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:     base >= 4 && <5,
                     HUnit,
                     hspec,
                     hspec-expectations,
                     QuickCheck,
                     bytestring,
                     containers,
                     detour-haskell

  hs-source-dirs:    tests
  main-is:           Check.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -prof -fprof-auto-top

executable           detour
  default-language:  Haskell2010

  build-depends:     base >= 4.7 && <5,
                     bytestring,
                     containers,
                     async,
                     hslogger,
                     optparse-applicative,
                     detour-haskell

  hs-source-dirs:    src
  main-is:           RuntimeProgram.hs

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -prof -fprof-auto-top


source-repository    head
  type:              git
  location:          git@github.com:afcowie/detour.git


-- vim: set tabstop=21 expandtab:
